--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
             <span class="stepper__btn-click" data-dir="up"></span>
         </span>
     </button>
-    <script src="/index.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
